src/test/resources/tests/typeError/treeMapWithUncomparableKey.qg

init {
    set = treeMap(mapEntry(arrayList(1), 1))
}

run true

input(a,b) true